Prevent flex:1 containers from overflowing outside parent box.

--- a/flex-helper.css
+++ b/flex-helper.css
@@ -12,6 +12,8 @@
     -webkit-align-content: flex-start;
     -ms-flex-line-pack: start;
     align-content: flex-start;
+
+    overflow: hidden; /*Prevent extending beyond boundaries*/
 }
 /*Stack child items horizontally*/
 .hbox {
@@ -27,6 +29,8 @@
     -webkit-align-content: flex-start;
     -ms-flex-line-pack: start;
     align-content: flex-start;
+
+    overflow: hidden; /*Prevent extending beyond boundaries*/
 }
 /*Stretch item along parent's main-axis*/
 .flex {
